--- a/kubernetes/components/common/cluster-secrets.sops.yaml
+++ b/kubernetes/components/common/cluster-secrets.sops.yaml
@@ -4,6 +4,9 @@ metadata:
   name: cluster-secrets
 stringData:
   SECRET_DOMAIN: ENC[AES256_GCM,data:eIgXoD4VDkov,iv:jsf03yPh9sedF4UuHsAdQfY2L7a0NdHQ3Hdk6ELl5Sw=,tag:be/Tl0vMMiYNL7Mp0QuBqw==,type:str]
+  NFS_SERVER: ENC[AES256_GCM,data:ieSB3W4S4o8eQg==,iv:M/Lx10xiEa7SzTHYPSJgkMVrZR3OfDXJ7QQl8M8V+3g=,tag:mWsizecbDQB6GbOLWtegHw==,type:str]
+  NFS_VIDEOS: ENC[AES256_GCM,data:dqkoHuylWne0yvU+Ttv7,iv:b/Py0mSLiyKnml0QbbOzOtDkzv6VFQCcnLGBAr/eCgE=,tag:J0rAmSyHnUE0g4+BTGflQQ==,type:str]
+  NFS_STORAGE: ENC[AES256_GCM,data:OlZv2hFbM3Kp1h6tzxtYlpjmBnI=,iv:SjFQFaY9785EXv+vvinfhV4ixhg8C5q2hRGnm5RXCVY=,tag:whhwDSQzh4sFjxmX4hUt6Q==,type:str]
 sops:
   age:
     - recipient: age15xt0x3hl5h3qqnagqeny4mzqxdhemampwa6v2wt3x6vkdvtq7fts4q7wjd
@@ -15,8 +18,8 @@ sops:
         U2VZU21Qajl1K0JvWXpiNzkrMWVKSUEKsFTuJWxmvpk3mNwb64C8dO3GjWZ7bS79
         D1r72KN2PXGwKJAidycBI+INPkJrh/r/QtZJ2PEvOsZybBy7EDQTXg==
         -----END AGE ENCRYPTED FILE-----
-  lastmodified: "2025-05-01T17:06:54Z"
-  mac: ENC[AES256_GCM,data:fwQu/ExPgOGEXzzRQdI2VouKYvP0IM6/SLzqEkMeRT950Jo3GND03XY32jdkh1/Aj9u68pcrsUwYLgwr6xrNo9EEJ8rEZrdas13BQJ7XC3GNGycNOZJ9o62oUgzZuVNXK1ApNNAJf+J732U+mnWz5JJ3mhTaLhLbuS0scGmsnhw=,iv:KiipzQOz02Zo7kDLLFCHBb1xw7ZxyLupBX4FLbEkqIA=,tag:uoLqXSpw5pbrdZnUgkbqNg==,type:str]
+  lastmodified: "2025-05-01T22:15:46Z"
+  mac: ENC[AES256_GCM,data:P1LyuK+CWm1yDC1B/ek/kH3y2lOaH3uLvQpZLQ45rJG7T2w/UD0o1+2UVTXeBafNfcATxKz7dplqanwgxAG1ooj0Y8cRUgoMxBLpo/fYdqyqvccoOwcHMDxHwIZsHUppdvnOSIfCctK5g2eNvbrcvP54GgQOYcun92OYnSpusKM=,iv:qopFBxUExgANb41MBZ+qaXRcYLzV4SFyCzLSOq2713U=,tag:u1/ZTUeTXaKN//ENPAwTgQ==,type:str]
   encrypted_regex: ^(data|stringData)$
   mac_only_encrypted: true
   version: 3.10.2
