--- a/kubernetes/apps/default/jellyseerr/app/helmrelease.yaml
+++ b/kubernetes/apps/default/jellyseerr/app/helmrelease.yaml
@@ -26,7 +26,7 @@ spec:
             containers:
               app:
                 image:
-                  repository: fallenbagel/jellyseerr
+                  repository: docker.io/fallenbagel/jellyseerr
                   tag: 2.5.2
                 env:
                   LOG_LEVEL: "info"
@@ -44,15 +44,14 @@ spec:
                       failureThreshold: 3
                   readiness: *probes
                 securityContext:
-                  allowPrivilegeEscalation: false
-                  readOnlyRootFilesystem: true
-                  capabilities: { drop: ["ALL"] }
-                resources:
-                  requests:
-                    cpu: 10m
-                    memory: 250Mi
-                  limits:
-                    memory: 1Gi
+                  supplementalGroups:
+                  #   # Hardware acceleration using an Intel iGPU w/ QuickSync
+                  #   # These IDs below should be matched to your `video` and `render` group on the host
+                  #   # To obtain those IDs run the following grep statement on the host:
+                  #   # $ cat /etc/group | grep "video\|render"
+                  - 44
+                  - 109
+                  - 100
 
     persistence:
       config:
