--- a/kubernetes/apps/default/jellyseerr/app/helmrelease.yaml
+++ b/kubernetes/apps/default/jellyseerr/app/helmrelease.yaml
@@ -31,15 +31,24 @@ spec:
                   tag: 2.5.2
                 env:
                   LOG_LEVEL: "info"
+                probes:
+                  liveness: &probes
+                    enabled: true
+                    custom: true
+                    spec:
+                      httpGet:
+                        path: /api/v1/status
+                        port: 5055
+                      initialDelaySeconds: 0
+                      periodSeconds: 10
+                      timeoutSeconds: 1
+                      failureThreshold: 3
+                  readiness: 3
 
     persistence:
       config:
         enabled: true
-        type: custom
-        volumeSpec:
-          nfs:
-            server: "${NFS_SERVER}"
-            path: "${NFS_STORAGE}/jellyseerr"
+        type: emptyDir
       config-logs:
         type: emptyDir
         globalMounts:
