--- a/kubernetes/apps/default/jellyseerr/app/helmrelease.yaml
+++ b/kubernetes/apps/default/jellyseerr/app/helmrelease.yaml
@@ -37,6 +37,8 @@ spec:
       config:
         enabled: true
         type: custom
+        globalMounts:
+          - /app/config
         volumeSpec:
           nfs:
             server: "${NFS_SERVER}"
