Try to clean shit up

--- a/kubernetes/apps/default/jellyseerr/app/helmrelease.yaml
+++ b/kubernetes/apps/default/jellyseerr/app/helmrelease.yaml
@@ -38,7 +38,7 @@ spec:
         enabled: true
         type: custom
         globalMounts:
-          - /app/config
+          path: /app/config
         volumeSpec:
           nfs:
             server: "${NFS_SERVER}"
