Try to clean shit up

--- a/kubernetes/apps/default/jellyseerr/app/helmrelease.yaml
+++ b/kubernetes/apps/default/jellyseerr/app/helmrelease.yaml
@@ -24,6 +24,8 @@ spec:
   values:
     controllers:
           main:
+            podSecurityContext:
+              fsGroup: 1000
             containers:
               app:
                 image:
@@ -31,6 +33,9 @@ spec:
                   tag: 2.5.2
                 env:
                   LOG_LEVEL: "info"
+                securityContext:
+                  runAsUser: 1000
+                  runAsGroup: 1000
 
 
     persistence:
